# book

./: .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  _typos.toml  book.toml  deny.toml  index.html  print.html  searchindex.js  searchindex.json
.github/: zizmor.yml
.github/workflows/: audit.yml  book.yml  ci.yml  spelling.yml
book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
book/in-depth/: config-files.html  docs.html  exit-code.html  human-communication.html  index.html  machine-communication-stdin.rs  machine-communication-wc.rs  machine-communication.html  signals-channels.rs  signals.html
book/resources/: index.html
book/tutorial/: cli-args-clap.rs  cli-args-struct.rs  cli-args.asciinema  cli-args.html  errors.html  impl-draft.html  impl-draft.rs  index.html  output-progressbar.rs  output.html  packaging.html  setup.html  testing.html
book/tutorial/testing/src/: main.rs
crates/: index.html
in-depth/: config-files.html  docs.html  exit-code.html  human-communication.html  index.html  machine-communication.html  machine-communication.rs  signals.html
logs/: 2018-05-03-packaging.md
meta/: .gitignore
meta/src/: README.md
meta/src/in-depth/: README.md  docs.md  human-communication.md  machine-communication-convey.rs
meta/src/tutorial/testing/src/: main.rs
meta/src/tutorial/testing/tests/: cli.rs
meta/survey-results/: Readme.md
resources/: index.html
src/: README.md  SUMMARY.md  getting_started.md  special-content.css  tutorial.md
src/crates/: README.md
src/in-depth/: README.md  config-files.md  docs.md  exit-code.md  human-communication.md  machine-communication-stdin.rs  machine-communication-wc.rs  machine-communication.md  machine-communication.rs  packaging-distribution.md  render-configuration.md  signals-channels.rs  signals-ctrlc.rs  signals-hooked.rs  signals.md
src/in-depth/tests/: haiku.txt  machine-communication-stdin.rs
src/resources/: README.md
src/tutorial/: README.md  cli-args-clap.rs  cli-args-clap3-stdin-stdout.rs  cli-args-struct.rs  cli-args-structopt.rs  cli-args-vars.rs  cli-args.asciinema  cli-args.md  errors-custom.rs  errors-exit.rs  errors-impl.rs  errors.md  impl-draft-shortcut.rs  impl-draft.md  impl-draft.rs  intro.md  output-log.rs  output.md  packaging.md  setup.asciinema  setup.md  testing-integration.rs  testing-working.rs  testing.md
src/tutorial/testing/: Cargo.toml
src/tutorial/testing/src/: main.rs
src/tutorial/testing/tests/: cli.rs
survey-results/: Readme.md
tutorial/: cli-args-struct.rs  cli-args-vars.rs  cli-args.html  errors-exit.rs  errors.html  impl-draft-shortcut.rs  impl-draft.html  impl-draft.rs  index.html  output.html  packaging.html  setup.html  testing.html
tutorial/testing/: Cargo.toml
tutorial/testing/src/: main.rs
