[package]
name = "CLAiR"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"

[[bin]]
name = "cli-args-vars"
path = "src/tutorial/cli-args-vars.rs"

[[bin]]
name = "cli-args-struct"
path = "src/tutorial/cli-args-struct.rs"

[[bin]]
name = "cli-args-clap"
path = "src/tutorial/cli-args-clap.rs"

[[bin]]
name = "impl-draft-shortcut"
path = "src/tutorial/impl-draft-shortcut.rs"

[[bin]]
name = "impl-draft"
path = "src/tutorial/impl-draft.rs"

[[bin]]
name = "errors-custom"
path = "src/tutorial/errors-custom.rs"

[[bin]]
name = "errors-exit"
path = "src/tutorial/errors-exit.rs"

[[bin]]
name = "errors-impl"
path = "src/tutorial/errors-impl.rs"

[[bin]]
name = "output-progressbar"
path = "src/tutorial/output-progressbar.rs"

[[bin]]
name = "output-log"
path = "src/tutorial/output-log.rs"

[[bin]]
name = "machine-communication"
path = "src/in-depth/machine-communication.rs"

[[bin]]
name = "machine-communication-wc"
path = "src/in-depth/machine-communication-wc.rs"

[[bin]]
name = "machine-communication-stdin"
path = "src/in-depth/machine-communication-stdin.rs"

[[bin]]
name = "signals-ctrlc"
path = "src/in-depth/signals-ctrlc.rs"

[[bin]]
name = "signals-hooked"
path = "src/in-depth/signals-hooked.rs"

[[bin]]
name = "signals-channels"
path = "src/in-depth/signals-channels.rs"

[workspace]
members = [
    "src/tutorial/testing",
]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
indicatif = "0.17.7"
log = "0.4.20"
env_logger = "0.10"
serde_json = "1.0.113"
serde_derive = "1.0.196"
serde = "1.0.196"
ctrlc = "3.4.2"
crossbeam-channel = "0.5.11"
signal-hook = "0.3.17"
is-terminal = "0.4.10"
