[package]
name = "CLAiR-testing"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"

# Make tests work with the name used in the tutorial
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"
